Fix regression causing misaligned search results
Only macOS tested

--- a/chrome/navbar/navbar.css
+++ b/chrome/navbar/navbar.css
@@ -461,8 +461,8 @@
 #PopupAutoCompleteRichResult [anonid="footer"]
 {
 	background-color: var(--toolbar-field-focus-background-color) !important;
-	margin-inline-start: calc(var(--item-padding-start) + 22px - 2px) !important;
-	margin-inline-end: calc(var(--item-padding-end) - 10px) !important;
+	margin-inline-start: calc(var(--item-padding-start) + 18px - 4px) !important;
+	margin-inline-end: calc(var(--item-padding-end) - 4px) !important;
 }
 
 #PopupAutoCompleteRichResult .autocomplete-richlistbox
